# genesis

./: .clang-format  .gitignore  CMakeLists.txt  Engine Layout Planning.md  post-build.bat  post-build.sh
assets/shaders/: shader.frag.glsl  shader.vert.glsl
genesis/: CMakeLists.txt
genesis/include/: Genesis.h  entry.h  genesis.h
genesis/src/: application.cpp  application.h  entry.h
genesis/src/Core/: Application.cpp  Application.h  Entry.h  EventSystem.cpp  EventSystem.h  InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  Logger.cpp  Logger.h  Mouse.cpp  Mouse.h  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
genesis/src/Events/: ApplicationEvents.h  Event.h  KeyboardEvents.h  MouseEvents.h
genesis/src/Platform/: GLFWWindow.cpp  GLFWWindow.h  LinuxWindow.cpp  LinuxWindow.h  PlatformDetection.h
genesis/src/Renderer/: VulkanRenderer.cpp  VulkanRenderer.h
genesis/src/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanMesh.cpp  VulkanMesh.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderLoop.cpp  VulkanRenderLoop.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSupportTypes.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.h  VulkanVertexMenagerie.cpp  VulkanVertexMenagerie.h
genesis/src/Resources/: ObjMesh.cpp  ObjMesh.h  Utils.cpp  Utils.h
testbed/: CMakeLists.txt
testbed/src/: Main.cpp  main.cpp
